# batter-bot

./: .gitignore  README.md  alembic.ini  pyproject.toml
bot/: config.py  db.py  main.py
migrations/: 001_init.sql  002_stats_and_routes.sql  003_admin_logs.sql  004_notify_flag.sql
migrations_alembic/: env.py
migrations_alembic/versions/: 8ca892cc82de_init.py
tests/: test_bot.py  test_scenarios.py
